--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web scraper for www.jellycat.com, targeting bags & purses",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -16,8 +16,13 @@
     "url": "https://github.com/yewenlyu/nfy-jellycat-scraper/issues"
   },
   "homepage": "https://github.com/yewenlyu/nfy-jellycat-scraper#readme",
+  "dependencies": {
+    "axios": "^1.1.3",
+    "cheerio": "^1.0.0-rc.12"
+  },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.108",
+    "@types/cheerio": "^0.22.31",
     "@types/node": "^18.11.9",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
