--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/yewenlyu/nfy-jellycat-scraper#readme",
   "dependencies": {
+    "@aws-sdk/client-sns": "^3.213.0",
     "axios": "^1.1.3",
     "cheerio": "^1.0.0-rc.12"
   },
