--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "nfy-jellycat-scraper",
   "version": "1.0.0",
   "description": "Web scraper for www.jellycat.com, targeting bags & purses",
-  "main": "index.js",
+  "bin": {
+    "nfy-jellycat-scrapper": "bin/app.js"
+  },
   "scripts": {
-    "test": "ts-node src/index.ts"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "clean": "rm -rf dist && rm -rf cdk.out",
+    "test": "ts-node src/index.ts",
+    "cdk": "cdk"
   },
   "repository": {
     "type": "git",
@@ -18,13 +24,17 @@
   "homepage": "https://github.com/yewenlyu/nfy-jellycat-scraper#readme",
   "dependencies": {
     "@aws-sdk/client-sns": "^3.213.0",
+    "aws-cdk-lib": "^2.50.0",
     "axios": "^1.1.3",
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "constructs": "^10.1.162",
+    "source-map-support": "^0.5.21"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.108",
     "@types/cheerio": "^0.22.31",
     "@types/node": "^18.11.9",
+    "aws-cdk": "^2.51.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
