--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,38 @@
 {
     "compilerOptions": {
-        "target": "es2020",
+        "target": "ES2018",
+        "module": "commonjs",
+        "lib": [
+            "es2018"
+        ],
+        "declaration": true,
         "strict": true,
+        "noImplicitAny": true,
+        "strictNullChecks": true,
+        "noImplicitThis": true,
+        "alwaysStrict": true,
+        "noUnusedLocals": false,
+        "noUnusedParameters": false,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": false,
+        "inlineSourceMap": true,
+        "inlineSources": true,
+        "experimentalDecorators": true,
+        "strictPropertyInitialization": false,
         "preserveConstEnums": true,
         "noEmit": true,
         "sourceMap": false,
-        "module": "commonjs",
         "moduleResolution": "node",
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "isolatedModules": true,
-        "rootDir": "src"
+        "typeRoots": [
+            "./node_modules/@types"
+        ]
     },
-    "include": [
-        "src/**/*.ts"
-    ],
     "exclude": [
         "node_modules",
-        "**/*.test.ts"
+        "cdk.out"
     ]
 }
